--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 			// Fetch products from the backend
 			async fetchProducts() {
 				try {
-					const response = await fetch('https://backend-pac5.onrender.com/api/products');
+					const response = await fetch('https://backend-s1o5.onrender.com/api/products');
 					if (!response.ok) {
 						throw new Error(`Server error: ${response.status} ${response.statusText}`);
 					}
@@ -435,7 +435,7 @@
 					};
 					console.log('Order data being sent:', orders); // Log for debugging
 					try {
-						const response = await fetch('https://backend-pac5.onrender.com/api/orders', {
+						const response = await fetch('https://backend-s1o5.onrender.com/api/orders', {
 							method: 'POST',
 							headers: { 'Content-Type': 'application/json' },
 							body: JSON.stringify(orders)
